Fix uneven button padding in top actions

--- a/components/TopActions/styles.module.scss
+++ b/components/TopActions/styles.module.scss
@@ -12,5 +12,9 @@
 
 	&:not(.stuck) .link-to-top {
 		display: none;
+
+		& + .button:not(.icon-button) {
+			margin-left: 0;
+		}
 	}
 }
